# Astrcode

./: .gitignore  .prettierignore  AGENTS.md  ASTRCODE_EXPLORATION_REPORT.md  CLAUDE.md  CODE_QUALITY_ISSUES.md  CODE_REVIEW_ISSUES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_ARCHITECTURE.md  PROJECT_STRUCTURE.md  README.md  REFACTOR_PLAN.md  ROADMAP.md  SECURITY.md  context.md  deny.toml  openspec_status.json  package-lock.json  package.json  rustfmt.toml  test_tool_demo.txt  tool_demo_example.md  update_css.js
crates/adapter-mcp/: Cargo.toml
crates/adapter-mcp/src/: core_port.rs  lib.rs
crates/adapter-mcp/src/bridge/: mod.rs  prompt_bridge.rs  prompt_tool.rs  resource_tool.rs  tool_bridge.rs
crates/adapter-mcp/src/config/: approval.rs  loader.rs  mod.rs  settings_port.rs  types.rs
crates/adapter-mcp/src/manager/: hot_reload.rs  mod.rs  reconnect.rs  surface.rs
crates/adapter-mcp/src/protocol/: client.rs  (+3 more)
crates/adapter-storage/: Cargo.toml
crates/adapter-storage/src/: config_store.rs  core_port.rs  lib.rs  mcp_settings_store.rs
crates/agent/: Cargo.toml
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: cancel.rs  event_mapping.rs  hook_dispatch.rs  lib.rs  loop.rs  provider.rs  runtime.rs  stream.rs  tool_dispatch.rs  types.rs
crates/agent/src/: agent_loop.rs  cancel.rs  config.rs  event_log.rs  events.rs  lib.rs  projection.rs  provider_factory.rs  service.rs  test_support.rs  tool_registry.rs
crates/application/: Cargo.toml
crates/application/src/: agent_use_cases.rs  app_agent.rs  app_session.rs  errors.rs  lib.rs  session_identity.rs  session_plan.rs  session_use_cases.rs  terminal_use_cases.rs  test_support.rs
crates/cli/: Cargo.toml  REVIEW.md  REVIEW2.md
crates/cli/src/: lib.rs
crates/context-window/: Cargo.toml
crates/context-window/src/: compaction.rs  file_access.rs  token_usage.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  agent_loop.rs  cancel.rs  capability.rs  compact_summary.rs  composer.rs  config.rs  env.rs  error.rs  event.rs  event_log.rs  events.rs  execution_control.rs  execution_result.rs  execution_task.rs  home.rs  hook.rs  ids.rs  kernel_api.rs  lib.rs  llm.rs  local_server.rs  mcp.rs  observability.rs  orchestrator.rs  plugin.rs  ports.rs  project.rs  projection.rs  prompt.rs  provider_factory.rs  runtime.rs  session_catalog.rs  session_plan.rs  shell.rs  skill.rs  state.rs  store.rs  support.rs  test_support.rs  (+4 more)
crates/core/tests/: app_home_integration.rs
crates/debug-workbench/: Cargo.toml
crates/debug-workbench/src/: lib.rs  models.rs  service.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs
crates/eval/tests/: core_end_to_end.rs  core_task_set.rs  trace_extractor_fixture.rs
crates/host-session/: Cargo.toml
crates/host-session/src/: branch.rs  catalog.rs  child_sessions.rs  collaboration.rs  compaction.rs  composer.rs  event_cache.rs  event_log.rs  event_translate.rs  execution_surface.rs  fork.rs  input_hooks.rs  input_queue.rs  lib.rs  model_selection.rs  ports.rs  projection.rs  projection_registry.rs  query.rs  session_plan.rs  state.rs  tasks.rs  turn_mutation.rs  turn_projection.rs  workflow.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: agent_surface.rs  error.rs  kernel.rs  lib.rs
crates/llm-contract/: Cargo.toml
crates/llm-contract/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: backend.rs  builtin_hooks.rs  descriptor.rs  hooks.rs  host.rs  host_catalog.rs  host_dispatch.rs  host_reload.rs  host_tests.rs  lib.rs  loader.rs  manifest.rs  modes.rs  protocol.rs  providers.rs  registry.rs  resource_provider.rs  resources.rs  snapshot.rs  tools.rs  transport.rs
crates/plugin/src/: capability_mapping.rs  capability_router.rs  executor.rs  handler_dispatcher.rs  handshake.rs  invoker.rs  lib.rs  lifecycle.rs  loader.rs  peer.rs  process.rs  streaming.rs  supervisor.rs  worker.rs
crates/plugin/tests/: v4_stdio_e2e.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/protocol/tests/: conformance.rs  conformance_v4.rs  conversation_conformance.rs  http_dto_contracts.rs  subrun_event_serialization.rs  terminal_conformance.rs
crates/runtime-agent-control/: Cargo.toml
crates/runtime-agent-control/src/: lib.rs  tests.rs
crates/runtime-agent-loader/: Cargo.toml
crates/runtime-agent-loader/src/: lib.rs
crates/runtime-agent-loop/: Cargo.toml
crates/runtime-agent-loop/src/: agent_control.rs  agent_loop.rs  approval_service.rs  compaction_runtime.rs  context_pipeline.rs  hook_runtime.rs  lib.rs  prompt_runtime.rs  provider_factory.rs  request_assembler.rs  subagent.rs  test_support.rs
crates/runtime-agent-profiles/: Cargo.toml
crates/runtime-contract/: Cargo.toml
crates/runtime-contract/src/: hooks.rs  lib.rs  traits.rs  turn.rs
crates/runtime-execution/: Cargo.toml
crates/runtime-execution/src/: context.rs  lib.rs  policy.rs  prep.rs  subrun.rs
crates/runtime-llm/: Cargo.toml
crates/runtime-llm/src/: anthropic.rs  cache_tracker.rs  lib.rs  openai.rs
crates/runtime-mcp/: Cargo.toml
crates/runtime-mcp/src/: lib.rs
crates/runtime-prompt/: Cargo.toml  build.rs
crates/runtime-prompt/src/: block.rs  composer.rs  context.rs  contribution.rs  diagnostics.rs  layered_builder.rs  lib.rs  plan.rs  prompt_declaration.rs  skill_catalog.rs  skill_loader.rs  skill_spec.rs  template.rs
crates/runtime-registry/: Cargo.toml
crates/runtime-registry/src/: lib.rs  router.rs  tool.rs
crates/runtime-session/: Cargo.toml
crates/runtime-session/src/: lib.rs  paths.rs  session_state.rs  support.rs  turn_runtime.rs
crates/runtime-skill-loader/: Cargo.toml  build.rs
crates/runtime-skill-loader/src/: lib.rs  skill_catalog.rs  skill_loader.rs  skill_spec.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  desktop_frontend_mode.rs  handle.rs  instance.rs  main.rs  paths.rs
src-tauri/src/handle/: model_service.rs  prompt_service.rs  session_service.rs  tests.rs
(+1873 files in other folders)
