[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/runtime-session",
    "crates/runtime-execution",
    "crates/runtime-agent-control",
    "crates/runtime-agent-loop",
    "crates/runtime-agent-loader",
    "crates/runtime-agent-tool",
    "crates/runtime",
    "crates/runtime-config",
    "crates/runtime-llm",
    "crates/runtime-prompt",
    "crates/runtime-skill-loader",
    "crates/protocol",
    "crates/plugin",
    "crates/sdk",
    "crates/runtime-tool-loader",
    "crates/runtime-registry",
    "crates/runtime-mcp",
    "crates/server",
    "examples/example-plugin",
    "src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["whatevertogo"]

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "sync", "fs", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream", "rustls"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
dirs = "6.0.0"
futures-util = "0.3"
fs2 = "0.4"
glob = "0.3"
log = "0.4"
env_logger = "0.11"
notify = "8.2.0"
rand = "0.10.0"
regex = "1"
tempfile = "3"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1"
async-stream = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
walkdir = "2"
ignore = "0.4"
globset = "0.4"
