[package]
name = "astrcode"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
anyhow = "1"
astrcode-core = { path = "../crates/core" }
dirs.workspace = true
open = "5"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
