[package]
name = "astrcode"
version = "0.1.0"
edition = "2021"
license-file.workspace = true
publish = false

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
anyhow = "1"
astrcode-core = { path = "../crates/core" }
dirs.workspace = true
fs2.workspace = true
open = "5"
rand.workspace = true
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
astrcode-core = { path = "../crates/core" }
tauri-build = { version = "2", features = [] }
