[package]
name = "astrcode-adapter-mcp"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-contract = { path = "../runtime-contract" }
astrcode-plugin-host = { path = "../plugin-host" }
astrcode-support = { path = "../support" }
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
log.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
