[package]
name = "astrcode-adapter-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-adapter-mcp = { path = "../adapter-mcp" }
astrcode-core = { path = "../core" }
async-trait.workspace = true
chrono.workspace = true
fs2.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
astrcode-core = { path = "../core", features = ["test-support"] }
tempfile.workspace = true
