[package]
name = "astrcode-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
dirs.workspace = true
futures-util.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
