[package]
name = "astrcode-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-kernel = { path = "../kernel" }
astrcode-session-runtime = { path = "../session-runtime" }
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
log.workspace = true
