[package]
name = "astrcode-context-window"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-llm-contract = { path = "../llm-contract" }
astrcode-runtime-contract = { path = "../runtime-contract" }
astrcode-support = { path = "../support" }
astrcode-tool-contract = { path = "../tool-contract" }
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
