[package]
name = "astrcode-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
uuid.workspace = true
chrono = { version = "0.4", features = ["serde"] }
ipc = { path = "../ipc" }
tokio-util = "0.7"
dirs = "5"
futures-util = "0.3"
regex = "1"
glob = "0.3"
walkdir = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
