[package]
name = "astrcode-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[features]
# 启用 test_support 模块和 tempfile 依赖，仅供其他 crate 的测试代码使用。
# 正常发布构建不会启用此 feature，避免将测试依赖编译进产物。
test-support = ["dep:tempfile"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
