[package]
name = "astrcode-debug-workbench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-application = { path = "../application" }
astrcode-core = { path = "../core" }
chrono.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
