[package]
name = "astrcode-host-session"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-agent-runtime = { path = "../agent-runtime" }
astrcode-core = { path = "../core" }
astrcode-plugin-host = { path = "../plugin-host" }
astrcode-prompt-contract = { path = "../prompt-contract" }
astrcode-runtime-contract = { path = "../runtime-contract" }
astrcode-support = { path = "../support" }
astrcode-tool-contract = { path = "../tool-contract" }
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
log.workspace = true
