[package]
name = "astrcode-llm-contract"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-prompt-contract = { path = "../prompt-contract" }
async-trait.workspace = true
serde.workspace = true
