[package]
name = "astrcode-plugin-host"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-protocol = { path = "../protocol" }
astrcode-runtime-contract = { path = "../runtime-contract" }
log.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
