[package]
name = "astrcode-runtime-agent-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
astrcode-core = { path = "../core", features = ["test-support"] }
tempfile.workspace = true
