[package]
name = "astrcode-runtime-agent-loop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-config = { path = "../runtime-config" }
astrcode-runtime-llm = { path = "../runtime-llm" }
astrcode-runtime-prompt = { path = "../runtime-prompt" }
astrcode-runtime-skill-loader = { path = "../runtime-skill-loader" }
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
log.workspace = true
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
astrcode-core = { path = "../core", features = ["test-support"] }
astrcode-plugin = { path = "../plugin" }
astrcode-protocol = { path = "../protocol" }
tempfile.workspace = true
