[package]
name = "runtime-agent-profiles"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"
tracing.workspace = true
