[package]
name = "astrcode-runtime-contract"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-llm-contract = { path = "../llm-contract" }
astrcode-tool-contract = { path = "../tool-contract" }
async-trait.workspace = true
chrono.workspace = true

