[package]
name = "astrcode-runtime-execution"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-config = { path = "../runtime-config" }
astrcode-runtime-prompt = { path = "../runtime-prompt" }
astrcode-runtime-registry = { path = "../runtime-registry" }
async-trait.workspace = true
uuid.workspace = true
