[package]
name = "astrcode-runtime-execution"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.runtime_boundary]
owner = "execution-orchestration"
public_surface = ["submit", "interrupt", "root-execute", "subrun-status", "subrun-cancel"]
target_depends_on = ["astrcode-core", "astrcode-runtime-config", "astrcode-runtime-prompt", "astrcode-runtime-registry"]
forbidden_depends_on = ["astrcode-runtime-session", "astrcode-runtime-agent-control", "astrcode-runtime-agent-loop"]

[dependencies]
astrcode-core = { path = "../core" }
astrcode-runtime-config = { path = "../runtime-config" }
astrcode-runtime-prompt = { path = "../runtime-prompt" }
astrcode-runtime-registry = { path = "../runtime-registry" }
async-trait.workspace = true
chrono.workspace = true
tracing = "0.1"
uuid.workspace = true
