[package]
name = "astrcode-runtime-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-protocol = { path = "../protocol" }
async-trait.workspace = true
futures-util.workspace = true
log.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
