[package]
name = "astrcode-runtime-prompt"
version = "0.1.0"
edition = "2021"

[dependencies]
astrcode-core = { path = "../core" }
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
dirs = "5"
log = "0.4"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
tempfile = "3"
