[package]
name = "astrcode-runtime-prompt"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dirs.workspace = true
log.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tempfile.workspace = true
