[package]
name = "astrcode-runtime-registry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
astrcode-core = { path = "../core" }
astrcode-protocol = { path = "../protocol" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
