[package]
name = "astrcode-runtime-session"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[package.metadata.runtime_boundary]
owner = "session-truth"
public_surface = ["session-state", "history", "replay", "catalog"]
target_depends_on = ["astrcode-core"]
legacy_depends_on = ["astrcode-runtime-agent-control", "astrcode-runtime-agent-loop"]
migration_note = "将剥离 turn orchestration 并移除 legacy_depends_on"

[dependencies]
astrcode-core = { path = "../core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
log.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
