[package]
name = "astrcode-runtime-skill-loader"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
astrcode-core = { path = "../core" }
log.workspace = true
serde.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
